# projectt

./: .gitignore  README.md  RiskGuard_Документация.docx  RiskGuard_Документация_по_примеру.docx  RiskGuard_Документация_проекта.docx  RiskGuard_Итоговая_документация.md  RiskGuard_Итоговая_документация_к_сдаче.docx  RiskGuard_Презентация_проекта.pptx
.github/: pull_request_template.md
apk/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
desktop/: README.md  main.py  requirements.txt
desktop-tauri/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
desktop-tauri/src/: App.tsx  index.css
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: lib.rs  main.rs
desktop/riskguard_desktop/: __init__.py  models.py  repository.py  session.py
docs/diagrams/: README.md  architecture.puml  cqrs-event-flow.puml  er-model.puml  idef0-context.puml  idef0-decomposition.puml  incident-flow.puml  risk-lifecycle.puml  sequence-risk-processing.puml  use-case.puml
release/: README.md
web/: API_SPEC.md  COURSE_4_5_CHECKLIST.md  README.md  app.py  doc_requirements.txt  requirements.txt  reset_demo_db.py
web/instance/: riskguard.db  riskguard_v2.db  riskguard_v3.db
web/static/: script.js  styles.css
web/templates/: admin_users.html  auth.html  background_tasks.html  create_plan.html  dashboard_base.html  error.html  expert_workspace.html  incident_portal.html  profile.html  reports.html  (+2 more)
(+20 files in other folders)
