[package]
name = "riskguard-desktop"
version = "0.1.0"
description = "RiskGuard desktop client for expert risk assessment"
authors = ["RiskGuard"]
edition = "2021"

[lib]
name = "riskguard_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
